--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
+// stylelint-disable
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+// stylelint-enable
 
 body {
     @apply bg-gray-700;
